snapshots/syntax/library/functions/objects/getobject/getobject_method_call.snap
---
source: vb6parse/src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: GetObject
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: filePath
        - kind: RightParenthesis
          text: )
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Save
