snapshots/syntax/library/functions/objects/getobject/getobject_range_notation.snap
---
source: src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: xlRange
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetObject
        - kind: LeftParenthesis
          text: (
        - kind: StringLiteral
          text: "\"C:\\Data\\Report.xls!Sheet1!R1C1:R10C5\""
        - kind: RightParenthesis
          text: )
