snapshots/syntax/library/functions/objects/getobject/getobject_with_application.snap
---
source: src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: xlApp
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetObject
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: filePath
        - kind: RightParenthesis
          text: )
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Application
